# Cobra-Launch-Core

./: .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  gap_analysis.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  todo.md  tsconfig.json  vercel.json
.github/: README.md  env.example
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.zap/: config.yaml  rules.tsv
cobra-unit/: README.md  package-lock.json  package.json  tailwind.config.ts
components/: AICommanderPanel.tsx  AdminTimeline.tsx  AdminUserCard.tsx  AuditLogCard.tsx  CTA.tsx  Dashboard.tsx  EscalationControls.tsx  KYCUploadCard.tsx  LetterPreviewModal.tsx  NotificationCenter.tsx  PDFExportCard.tsx  ProfileHeader.tsx  RebuildPreviewModal.tsx  TermsModal.tsx  TimelineCard.tsx  UploadDocumentModal.tsx  UploadSuccessModal.tsx
dashboard/: page.tsx
docs/: architecture.md  launch_checklist.md
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  package.json.jest  tailwind.config.js
k8s/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml  secrets.yaml  services.yaml
lib/: admin-mock-data.ts  ai-commander.ts  audit-log.ts  auth.ts  letter-generator.ts  mongodb.ts  notifications.ts  (+2 more)
libs/fcra-compliance/: Cargo.toml
libs/fcra-compliance/src/: lib.rs
(+540 files in other folders)
