[package]
name = "fcra-compliance"
version = "0.1.0"
edition = "2021"
authors = ["Project Cobra Team"]
description = "FCRA compliance validation engine for credit dispute letters"

[dependencies]
regex = "1.9.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
